$Id$
Version 1.1.2 (?? ??? 2006)
 - Applied PATCH [ 1570573 ] Use <ul> list in view_entry.php
 - Fixed bug [ 1588205 ] Warning in preferences re ANSI_X3.4-1968
 - Fixed bug [ 1587046 ] error messages during to use the 'installation-wizard'
 - Fixed bug [ 1582833 ] list_unapproved.php can't approve group of events
 - Fixed bug [ 1587041 ] error messages during the 'login.php'
 - Fixed bug [ 1587046 ] error messages during to use the 'installation-wizard'
 - Created common mail function in WebCalMailer.class
 - Created new generate_application_name() function
 - Created new is_weekend() function
 - Created new generate_activity_log() funciton
 - Fixed bug [ 1580720 ] Missing menus
 - Fixed bug [ 1583074 ] Switching between 'Languages' will erase the entries
 - Fixed bug [ 1585625 ] 'register.php' didn't displayed in the proper language
 - Fixed bug [ 1584656 ] Bug in Gradient Backroundcolors
 - Fixed bug [ 1584275 ] extra week day in VIEW week
 - Fixed bug [ 1584284 ] disappearing URLs if edit entry
 - Fixed bug [ 1573642 ] detailed view for public access cannot be activated by UAC
 - Fixed bug [ 1572685 ] no add attachment for users not-logged in
 - Temporary fix for bug [ 1580720 ] Missing menus
   While we look for more elegant solutions.
 - Fixed bug [ 1582942 ] Javascript errors in edit_entry.php if Repeats disabled
 - Fixed bug [ 1582745 ] 'Public Access' nor more translated in the participants-list
 - Fixed bug [ 1582686 ] installation-wizard didn't start with the proper language
 - Implemented RFE [ 1529290 ] Purge Deleted events
 - Applied PATCH [ 1557394 ] patch for LDAP to use ldap_user_filter for login (updated)
 - Applied PATCH [ 1580572 ] Russian.txt file update (Russian and Russian_utf8)
   (after running tools/update_translation.pl on them).
 - Fixed bug [ 1525230 ] Publish does not work with use_http_auth=true
 - Fixed bug [ 1575484 ] Remote publish/subscribe doesn't authenticate correctly